// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <Suggestions
    suggestions="user_groups"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="user_groups.page"
  />
  <div
    className="page page-limited"
    id="groups-page"
  >
    <Header
      onCreate={[Function]}
    />
    <SearchBox
      className="big-spacer-bottom"
      id="groups-search"
      minLength={2}
      onChange={[Function]}
      placeholder="search.search_by_name"
      value=""
    />
  </div>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <Suggestions
    suggestions="user_groups"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="user_groups.page"
  />
  <div
    className="page page-limited"
    id="groups-page"
  >
    <Header
      onCreate={[Function]}
    />
    <SearchBox
      className="big-spacer-bottom"
      id="groups-search"
      minLength={2}
      onChange={[Function]}
      placeholder="search.search_by_name"
      value=""
    />
    <List
      groups={
        [
          {
            "default": false,
            "description": "Owners of organization foo",
            "id": 1,
            "membersCount": 1,
            "name": "Owners",
          },
          {
            "default": true,
            "description": "Members of organization foo",
            "id": 2,
            "membersCount": 2,
            "name": "Members",
          },
        ]
      }
      onDelete={[Function]}
      onEdit={[Function]}
      onEditMembers={[Function]}
      showAnyone={true}
    />
    <div
      id="groups-list-footer"
    >
      <ListFooter
        count={3}
        loadMore={[Function]}
        loading={false}
        ready={true}
        total={5}
      />
    </div>
  </div>
</Fragment>
`;
